Changes from 4.2.18 to 4.3.0
----------------------------
** Improvement
    * [FELIX-5503] - Add simple json writer
    * [FELIX-5504] - Switch from org.json to new simple json writer


Changes from 4.2.16 to 4.2.18
-----------------------------
** Bug
    * [FELIX-4840] - Asynchronous IO fails in webconsole plugin
    * [FELIX-5387] - NPE for requests missing 'felix-webconsole-locale' cookie

** Improvement
    * [FELIX-5445] - Web Console: Properly display non-string property arrays in name hint
    * [FELIX-5484] - Webconsole configuration factory name hint array rendering


Changes from 4.2.14 to 4.2.16
-----------------------------
** Bug
    * [FELIX-4941] - Configuration Properties not defined in Metatype are lost after update
    * [FELIX-4795] - Servlet API 3.x not supported 
    * [FELIX-5223] - [IE11][Edge]: Fields in OSGI Configuration Manager are not editable 


Changes from 4.2.12 to 4.2.14
-----------------------------
** Bug
    * [FELIX-5042] - Get system bundle by location, not number for global bundle list
    * [FELIX-5060] - Unnecessary import of org.osgi.service.component


Changes from 4.2.10 to 4.2.12
-----------------------------
** Bug
    * [FELIX-2880] - The Webconsole does not handle Vector<PrimitiveWrapper>
    * [FELIX-3366] - The Configuration Webconsole Plugin seems to ignore the ocd ref element
    * [FELIX-4849] - Do not call setContentLength after calling sendRedirect
    * [FELIX-4995] - NPE when updating Apache Felix OSGi Management Console configuration without a password
    * [FELIX-5004] - Null is passed to BundleInfoProvider if plugin root is null
    * [FELIX-5031] - NPE in Web Console configuration plugin when metatype service is missing
    * [FELIX-5041] - Cannot build web console with JDK 1.8 due to javadoc problems

** Improvement
    * [FELIX-5018] - [webconsole] "create factory configuration" link for config screen
    * [FELIX-5019] - [webconsole] "referer" parameter for configuration open/create link

